--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/prf.JPG" alt="Jasvinder Singh Picture">
+   				<img src="images/profile_pic.JPG" alt="Jasvinder Singh Picture">
 
    				<p class="lead">"Lad with a <font color="#FF0077">million</font> dreams."</p>
    			</div>   			
